--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,13 @@
     transform: rotate(360deg);
   }
 }
+
+.dataPreviewBlock{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #F6F6F6; 
+  height: 4.7rem; 
+  background-color: white;
+}
+
