--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #F6F6F6; 
+  color: #8A8A8A; 
   height: 4.7rem; 
   background-color: white;
 }
